--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="/assets/css/styles.css">
   
 </head>
-<body>
+<body class="no-scroll">
   <div class="position-fixed rek-z-index-100 end-0 top-0 h-100 d-md-flex d-none">
     <div class="rek-sidebar position-relative d-flex flex-column h-100 justify-content-center gap-5">
       <div class="rek-sidebar-point position-absolute end-0 me-3"></div>
@@ -22,7 +22,6 @@
       <button class="rek-sidebar-station rek-link" scroll-target="2"><i scroll-target="2" class="bi bi-kanban-fill fs-1 text-white"></i></button>
       <button class="rek-sidebar-station rek-link" scroll-target="3"><i scroll-target="3" class="bi bi-people-fill fs-1 text-white"></i></button>
       <button class="rek-sidebar-station rek-link" scroll-target="4"><i scroll-target="4" class="bi bi-envelope-paper fs-1 text-white"></i></button>
-      <button class="rek-sidebar-station rek-link" scroll-target="4"><i scroll-target="5" class="bi bi-info-square fs-1 text-white"></i></button>
     </div>
   </div>
   <div class="rek-layout position-relative overflow-hidden">
@@ -219,7 +218,7 @@
                   1998'de Konya da doğdum. Elektrik Elektronik Mühendisiyim. Oyun geliştirme dışında yapay zeka ile ilgileniyorum.
                 </p>
               </div>
-              <h6 class="text-white text-center">Furkan <br><i class="fw-lighter">Takım Lideri/Geliştirici</i></h6>
+              <h6 class="text-white text-center text-nowrap">Furkan <br><i class="fw-lighter">Takım Lideri/Geliştirici</i></h6>
             </div>
           </div>
           <div class="row d-flex justify-content-center gap-5">
@@ -232,7 +231,7 @@
                   1998'de Konya da doğdum. Elektrik Elektronik Mühendisiyim. Oyun geliştirme dışında yapay zeka ile ilgileniyorum.
                 </p>
               </div>
-              <h6 class="text-white text-center">Enes <br><i class="fw-lighter">Komutan</i></h6>
+              <h6 class="text-white text-center text-nowrap">Enes <br><i class="fw-lighter">Komutan</i></h6>
             </div>
             <div class="col-sm-2 col-5 p-0 mb-sm-2 mb-0 rek-top-line d-sm-flex flex-column d-none">
               <div data-aos-offset="100" data-aos-delay="500" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="300" class="rek-member rek-pt-100 rounded-circle overflow-hidden border-1 border-white border  position-relative">
@@ -243,7 +242,7 @@
                   1998'de Konya da doğdum. Elektrik Elektronik Mühendisiyim. Oyun geliştirme dışında yapay zeka ile ilgileniyorum.
                 </p>
               </div>
-              <h6 class="text-white text-center">Ali Emre <br><i class="fw-lighter">Modelleme/Senaryo Yazarı</i></h6>
+              <h6 class="text-white text-center text-nowrap">Ali Emre <br><i class="fw-lighter">Modelleme/Senaryo Yazarı</i></h6>
             </div>
             <div class="col-sm-2 col-5 p-0 mb-sm-2 mb-0 rek-top-left">
               <div data-aos-offset="100" data-aos-delay="700" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="300" class="rek-member rek-pt-100 rounded-circle overflow-hidden border-1 border-white border position-relative">
@@ -254,7 +253,7 @@
                   1998'de Konya da doğdum. Elektrik Elektronik Mühendisiyim. Oyun geliştirme dışında yapay zeka ile ilgileniyorum.
                 </p>
               </div>
-              <h6 class="text-white text-center">Mert <br><i class="fw-lighter">Ses Tasarımcısı</i></h6>
+              <h6 class="text-white text-center text-nowrap">Mert <br><i class="fw-lighter">Ses Tasarımcısı</i></h6>
             </div>
           </div>
           <div class="row d-sm-none d-flex justify-content-center">
@@ -267,7 +266,7 @@
                 1998'de Konya da doğdum. Elektrik Elektronik Mühendisiyim. Oyun geliştirme dışında yapay zeka ile ilgileniyorum.
               </p>
             </div>
-            <h6 class="text-white text-center">Ali Emre <br><i class="fw-lighter">Modelleme/Senaryo Yazarı</i></h6>
+            <h6 class="text-white text-center text-nowrap">Ali Emre <br><i class="fw-lighter">Modelleme/Senaryo Yazarı</i></h6>
           </div>
         </div>
         </div>
@@ -276,7 +275,7 @@
       <section id="rekSection4"  class="rek-section vh-100 overflow-hidden d-flex justify-content-center position-relative overflow-hidden flex-column">
         
         <h1 id="rekSectionTitle4" class="rek-section-title text-white  ">İletişim</h1>
-        <div class="container">
+        <div class="container my-auto">
           <div class="row">
             <div class="col-md-6 col-12 mb-5 py-md-4 pe-md-4">
               <div class="rek-contact-left bg-white rek-rounded border-end border-white border-top d-flex justify-content-center flex-column rek-rounded h-100 p-4">
